# stock-options-analysis-tools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
FinvizScraper/src/: Example.py  FinvizScraper.py
OptionsAnalysis/data/: cboe_symbol_dir_weeklys.csv  gme.xls  nio.xls  pltr.xls  spy.xls  tqqq.xls  tsla.xls
OptionsAnalysis/src/: Example.py  ExampleTS.py  ExampleWeb.py  NIO.py  OptsAnalysis.py  PLTR.py  RunStock.py  SPY.py  SQQQ.py  Weekly  utils.py
SEC_Analysis/: SECscraper.py  SECtoXLSX.py
SEC_Analysis/src/: SEC_Analysis.py  SEC_Params.py
StockData/data/: data_KBE.txt  data_OIIM.txt
StockData/src/: StockData.py
data/: data_FHB.txt  data_SMH.txt
scripts/: example_ts.py  example_web.py  run_stock.py
src/finviz_scraper/: __init__.py  core.py
src/options_analysis/: __init__.py  core.py
src/options_analysis/sources/: __init__.py  base.py  tradestation.py  yahoo_scrape.py  yfinance_source.py
src/sec_analysis/: __init__.py  core.py  params.py
src/shared/: __init__.py  utils.py
src/stock_data/: __init__.py  core.py
tests/: conftest.py  test_options_analysis.py  test_shared.py
tests/fixtures/: sample_ts_options.csv
tests/integration/: test_options_fixture.py
